--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -10,7 +10,7 @@ You should have received a copy of the CC0 legalcode along with this
 work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
 -->
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="settings">Inställningar</string>
+    <string name="settings">Inställning</string>
     <string name="light">Ljust</string>
     <string name="dark">Mörkt</string>
     <string name="delete">Radera</string>
@@ -77,8 +77,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="changelog">Ändringar</string>
     <string name="more_info">Mer information</string>
     <string name="show_license_of_the_app">Visa licens för appen</string>
-    <string name="show_third_party_licenses">Tredjepartsbibliotek</string>
-    <string name="language_change_restart_description">Byt språk för appen. Starta om appen för att ändringarna ska träda i kraft</string>
+    <string name="show_third_party_licenses">Visa tredjeparts-licenser</string>
+    <string name="language_change_restart_description">Byt språk för appen. Starta om för att fastställa ändringar</string>
     <string name="language">Språk</string>
     <string name="error_need_storage_permission_to_save_documents">Behöver åtkomst till lagringsmedia för att spara dokument</string>
     <string name="open_with">Öppna med</string>
@@ -213,7 +213,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="open_source_licenses">Licenser för Öppen Källkod</string>
     <string name="rate_this_app">Betygsätt den här appen</string>
     <string name="translate">Översätt</string>
-    <string name="more_info_and_help">Mer information och hjälp</string>
+    <string name="more_info_and_help">Mer info och hjälp</string>
     <string name="report_bugs">Rapportera buggar</string>
     <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">Mer information om att donera till utvecklaren eller bidra till detta projekt.</string>
     <string name="join_community">Delta i gemenskapen</string>
@@ -221,7 +221,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="help_translating_this_app">Översätt appen till fler språk</string>
     <string name="source_code">Källkod</string>
     <string name="project_license">Projektets licens</string>
-    <string name="contribute_code_to_this_project_anybody_welcome">Bidra med kod till projektet. Alla är välkomna, även nybörjare</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">Bidrag med kod till projektet. Alla är välkommna, även nybörjare</string>
     <string name="project_team">Projektlag</string>
     <string name="contributors_public_add_yourself_description">Visa bidragsinformation. Lämna information för att synas här, om du vill, efter bidragande</string>
     <string name="descending">fallande ordning</string>
@@ -438,6 +438,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format">Dela till - Format</string>
     <string name="auto_format">Auto-format</string>
     <string name="insert_snippet">Insert snippet</string>
-    <string name="error_could_not_open_file">Fel: Kunde inte öppna.</string>
     <string name="document_error_clip">Ett fel uppstod: Text kopierad till urklipp.</string>
 </resources>
