--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -14,7 +14,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="light">浅色</string>
     <string name="dark">深色</string>
     <string name="delete">删除</string>
-    <string name="appearance">外观样式</string>
+    <string name="appearance">外观</string>
     <string name="rename">重命名</string>
     <string name="confirm_delete">确认删除</string>
     <string name="do_you_really_want_to_delete_this_witharg">您确定要删除 %s 吗？</string>
@@ -73,19 +73,19 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="contributors">贡献者</string>
     <string name="save_location">保存位置</string>
     <string name="select_storage_folder">选择存储文件夹</string>
-    <string name="licenses">许可协议</string>
-    <string name="changelog">更新日志</string>
+    <string name="licenses">开源协议</string>
+    <string name="changelog">更新日志​​​​​</string>
     <string name="more_info">更多信息</string>
     <string name="show_license_of_the_app">显示应用的开源许可协议</string>
-    <string name="show_third_party_licenses">显示第三方许可协议</string>
-    <string name="language_change_restart_description">更改语言 (重启应用后生效)</string>
+    <string name="show_third_party_licenses">显示第三方许可</string>
+    <string name="language_change_restart_description">更改语言（重启应用后生效）</string>
     <string name="language">语言</string>
     <string name="error_need_storage_permission_to_save_documents">需要存储权限才能保存文档</string>
     <string name="open_with">打开方式</string>
     <string name="sort_by">排序方式</string>
     <string name="date">日期</string>
     <string name="deleteme____1">名称</string>
-    <string name="size">文件大小</string>
+    <string name="size">按文件大小排序</string>
     <string name="reverse_order">逆向排序</string>
     <string name="contribute">贡献</string>
     <string name="donate">捐赠</string>
@@ -210,17 +210,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="edit_text_in_center_of_screen">在屏幕中央编辑文本</string>
     <string name="clipboard">剪切板</string>
     <string name="select_existing_document">选择已有文档</string>
-    <string name="open_source_licenses">开源代码许可</string>
+    <string name="open_source_licenses">开源协议</string>
     <string name="rate_this_app">评价本应用</string>
     <string name="translate">翻译</string>
     <string name="more_info_and_help">更多信息与帮助</string>
-    <string name="report_bugs">报告错误</string>
+    <string name="report_bugs">报告 bug</string>
     <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">查看有关捐赠给开发人员或为此项目做出贡献的更多信息。</string>
     <string name="join_community">加入社区</string>
-    <string name="bug_reports_suggest_improvements">反馈、报告问题或提出改进建议</string>
-    <string name="help_translating_this_app">将本应用翻译成其他语言</string>
+    <string name="bug_reports_suggest_improvements">给出反馈，报告问题，或提出改进建议</string>
+    <string name="help_translating_this_app">翻译本应用</string>
     <string name="source_code">源代码</string>
-    <string name="project_license">项目许可协议</string>
+    <string name="project_license">项目开源协议</string>
     <string name="contribute_code_to_this_project_anybody_welcome">为本项目贡献代码。我们欢迎所有人参与进来，包括新手</string>
     <string name="project_team">项目团队</string>
     <string name="contributors_public_add_yourself_description">显示贡献者信息。贡献者可自行选择是否被添加到这里。</string>
@@ -237,7 +237,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="details">细节</string>
     <string name="calendar">日历</string>
     <string name="warning_disallowed_sd_access">警告！ 应用没有保存此文件的权限，所有更改都将丢失。 无法解决问题或确认某些内容，Android 拒绝此处的任何访问。</string>
-    <string name="error_picture_selection">没有选择、拍摄或保存图片。</string>
+    <string name="error_picture_selection">没有选取照片</string>
     <string name="gallery_picture">从相册选取</string>
     <string name="camera_picture">相机</string>
     <string name="enable_undo_and_redo_be_patient">启用撤消和重做操作。 只适合高级使用，请耐心、不要删除重要的东西。 关闭并打开编辑器以清除历史记录。</string>
@@ -438,6 +438,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format">分享到 - 格式</string>
     <string name="auto_format">自动格式</string>
     <string name="insert_snippet">插入片段</string>
-    <string name="error_could_not_open_file">错误：无法打开。</string>
     <string name="document_error_clip">出现错误：文本已复制到剪贴板。</string>
 </resources>
