--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -49,7 +49,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="document_editor_font">ドキュメントエディターフォント</string>
     <string name="theme">テーマ</string>
     <string name="open_existing_files_in_view_mode">表示モードで既存のファイルを開く</string>
-    <string name="about">情報</string>
+    <string name="about">アプリについて</string>
     <string name="plaintext">プレーンテキスト</string>
     <string name="file">ファイル</string>
     <string name="image">画像</string>
@@ -438,6 +438,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format">共有 → 書式</string>
     <string name="auto_format">自動フォーマット</string>
     <string name="insert_snippet">Insert snippet</string>
-    <string name="error_could_not_open_file">エラー：開けませんでした。</string>
     <string name="document_error_clip">エラーが発生しました: テキストをクリップボードにコピーしました。</string>
 </resources>
