[ci skip] Update translations (Serbian (Cyrillic))

--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -28,10 +28,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="contributors">Сарадници</string>
     <string name="licenses">Licence</string>
     <string name="changelog">Дневник измена</string>
+    <string name="show_license_of_the_app">Покажите лиценцу апликације</string>
     <string name="show_third_party_licenses">Прикажи лиценце треће стране</string>
     <string name="language_change_restart_description">Промените језик апликације. Поново покрените након тога</string>
     <string name="language">Језик</string>
     <string name="size">Veličina</string>
+    <string name="contribute">Допринеси</string>
     <string name="donate">Doniraj</string>
     <string name="exit">Izadji</string>
     <string name="more">још</string>
